
## [3.0-RC4] 2016-02-01 Samuel Kerrien

### Updated fields
* Add /agents.contributors.family_name
* Add /agents.contributors.given_names
* Add ‘private' to registration.release enum
* Rename dataset.comment to dataset.description
* Add an organisation_ref to /agents.contributors
  A user that has multiple organisations should be modelled as separate contributors so that roles can be attributed to a specific organisation.
  The organisation MUST be in the same file.

### Usage note
* Support for multiple roles for an activity's agent was requested but it was decided that we users should duplicate the definition of the agent instead.

## [3.0-RC3] 2016-01-07 Samuel Kerrien / Lomig Mégard / Catherine Zwahlen / Yuri Katkov

### Updated fields
* 'schema_version' enum now has only the following value: "3.0"
* All fields representing a UUID, previously typed as #/definitions/uuid are now defined as "type":"string", "format":"uuid"
  That way we do not have to maintain our own regex (which was wrong anyway since typically the accepted character set is 0-9a-Z)
* All fields representing dates, previously typed as #/definitions/date_optional_MM_DD are now defined as "type":"string", "format":"date" so we do not have to maintain our own regex. 
* All fields representing emails with hand crafted regex, are now defined as "type":"string", "format":"email" and will be validated as per the schema specification against RFC 5322, section 3.4.1.
* 'registration.data_providers': instead of defining the providers, we now only have a list of identifiers that should take their values in 'agents.contributors', 'agents.organisations' or 'agents.software'. This list of identifiers does not allow for duplicates.
* Renamed 'activities.agents.id' to 'activities.agents.agent_ref' to clarify that this is a reference to an existing agent UUID.